Tim berners modif

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
     </section>
     <article>
-        <h3>His favorite movies</h3>
+        <h3><mark class="markup">His</mark> favorite movies</h3>
         <div class="movie">
             <img src="image/space-odyssey.jpg" alt="">
             <div class="movieDesc">
