Rectification de la section en nav

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </p>
         <a href="https://fr.wikipedia.org/wiki/Tim_Berners-Lee" target="_blank">See for yourself</a>
     </header>
-    <section>
+    <nav>
         <ul>
             <li>
                 <a href="#sqd" class="fab fa-facebook-f"></a>
@@ -35,7 +35,7 @@
                 <p>Twitter</p>
             </li>
         </ul>
-    </section>
+    </nav>
     <article>
         <h3><mark class="markup">His</mark> favorite movies</h3>
         <div class="movie">
